// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCloseIconJssStyle() should return correct JssStyle 1`] = `
{
  "marginLeft": "1rem",
}
`;

exports[`getComponentCss() should return correct css for state: error, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #290A0A !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: error, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #FCE8E9 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: success, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #003320 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: success, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #EBFAF0 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: warning, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #2B2208 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: warning, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #FFF9E6 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    width: calc(6px + 2.125ex);
    height: calc(6px + 2.125ex);
  }
}
"
`;

exports[`getNotificationContentJssStyle() should return correct JssStyle 1`] = `
{
  "display": "grid",
  "gridGap": "0.25rem",
  "maxWidth": "50rem",
}
`;

exports[`getNotificationIconJssStyle() should return correct JssStyle 1`] = `
{
  "@media(min-width:760px)": {
    "display": "inline-flex",
    "font": "1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "calc(6px + 2.125ex)",
    "width": "calc(6px + 2.125ex)",
  },
  "display": "none",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: error and theme: dark 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#290A0A",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: error and theme: light 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#FCE8E9",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: dark 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#001A33",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: light 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#E8EEFD",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: neutral and theme: dark 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": undefined,
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: neutral and theme: light 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": undefined,
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: success and theme: dark 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#003320",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: success and theme: light 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#EBFAF0",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: warning and theme: dark 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#2B2208",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: warning and theme: light 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#FFF9E6",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;
